added social media lightbox

--- a/html/contactus.html
+++ b/html/contactus.html
@@ -17,7 +17,7 @@
     <a href="./our-location.html">Our Location</a>
     <a href="#">Contact Us</a>
   </nav>
-  <button class="btn-signing">Socials</button>
+  <button class="btn-signing" id="openLightbox">Socials</button>
 </header>
 <div class="contact-page">
     <h2>Contact Us</h2>
@@ -46,5 +46,16 @@
       🗺️ Please see the Map in the menu for directions.
     </div>
   </div>
+
+  <div class="lightbox" id="lightbox">
+    <div class="lightbox-content">
+      <h2>Follow Us</h2>
+      <img class="social-icon" src="../images/instagram-icon1.png"><a href="https://instagram.com/tainoheritagecamp/" target="_blank">Instagram</a>
+      <img class="social-icon" src="../images/facebook-icon1.jpg"><a href="https://facebook.com/tainoheritagecamp/" target="_blank">Facebook</a>
+    <button class="close-btn" id="closeLightbox">Close</button>
+  </div>
+
+<script src="../js/map-location.js"></script>
+
 </body>
 </html>
