--- a/html/events.html
+++ b/html/events.html
@@ -16,7 +16,7 @@
     <a href="./our-location.html">Our Location</a>
     <a href="./contactus.html">Contact Us</a>
   </nav>
-  <button class="btn-signing">Socials</button>
+  <button class="btn-signing" id="openLightbox">Socials</button>
 </header>
 
 <main>
@@ -25,6 +25,13 @@
   <div id="chat" class="chat-input"></div>
   <input type="text" id="answer" autocomplete="off" placeholder="Type your answer here">
   <button type="button" id="sendBtn">Send</button>
+
+  <div class="lightbox" id="lightbox">
+    <div class="lightbox-content">
+      <h2>Follow Us</h2>
+      <img class="social-icon" src="../images/instagram-icon1.png"><a href="https://instagram.com/tainoheritagecamp/" target="_blank">Instagram</a>
+      <img class="social-icon" src="../images/facebook-icon1.jpg"><a href="https://facebook.com/tainoheritagecamp/" target="_blank">Facebook</a>
+    <button class="close-btn" id="closeLightbox">Close</button>
   </div>
 </main>
 
