--- a/html/our-location.html
+++ b/html/our-location.html
@@ -21,7 +21,7 @@
         <a href="#">Our Location</a>
         <a href="./contactus.html">Contact Us</a>
     </nav>
-    <button class="btn-signing">Socials</button>
+    <button class="btn-signing" id="openLightbox">Socials</button>
     </header>
     <div class="map-header"><h1>This interactive map will show you how to get from Ocho Rios bypass to Oracabessa. Click on the instructions to see landmarks along the way.</h1>
     <h3>
@@ -30,6 +30,14 @@ The access road to the camp is a farm road, like all naturally beautiful locatio
   <div class="map-container">
     <div id="map"></div>
     </div>
+
+  <div class="lightbox" id="lightbox">
+    <div class="lightbox-content">
+      <h2>Follow Us</h2>
+      <img class="social-icon" src="../images/instagram-icon1.png"><a href="https://instagram.com/tainoheritagecamp/" target="_blank">Instagram</a>
+      <img class="social-icon" src="../images/facebook-icon1.jpg"><a href="https://facebook.com/tainoheritagecamp/" target="_blank">Facebook</a>
+    <button class="close-btn" id="closeLightbox">Close</button>
+  </div>
 <script src="../js/map-location.js">
 </script>
 <footer>
