--- a/html/index.html
+++ b/html/index.html
@@ -21,7 +21,7 @@
                 <a href="./contactus.html">Contact Us</a>
             </nav>
 
-            <button class="btn-signing">Socials</button>
+            <button class="btn-signing" id="openLightbox">Socials</button>
         </header>
 
         <main>
@@ -43,11 +43,22 @@
                     <a href="./schoolprograms.html" class="btn-get-started-school">Explore School Programs</a>
                     <a href="./yukayeke.html" class="btn-learn-more-yukayeke">The Yukayeke Experience</a>
             </div>
+
+  <div class="lightbox" id="lightbox">
+    <div class="lightbox-content">
+      <h2>Follow Us</h2>
+      <img class="social-icon" src="../images/instagram-icon1.png"><a href="https://instagram.com/tainoheritagecamp/" target="_blank">Instagram</a>
+      <img class="social-icon" src="../images/facebook-icon1.jpg"><a href="https://facebook.com/tainoheritagecamp/" target="_blank">Facebook</a>
+    <button class="close-btn" id="closeLightbox">Close</button>
+  </div>
     </main>
 </div> 
 
 <footer>
     <p>&copy; 2025 Taino Heritage Camp. All Rights Reserved.</p>
-</footer>   
+</footer>
+
+<script src="../js/map-location.js"></script>
+
 </body>
 </html>
