--- a/html/visitevents.html
+++ b/html/visitevents.html
@@ -16,7 +16,7 @@
         <a href="./our-location.html">Our Location</a>
         <a href="./contactus.html">Contact Us</a>
     </nav>
-    <button class="btn-signing">Socials</button>
+    <button class="btn-signing" id="openLightbox">Socials</button>
   </header>
 
 <main>
@@ -49,5 +49,13 @@
 <footer>
     <p>&copy; 2025 Taino Heritage Camp. All Rights Reserved.</p>
 </footer>
+
+  <div class="lightbox" id="lightbox">
+    <div class="lightbox-content">
+      <h2>Follow Us</h2>
+      <img class="social-icon" src="../images/instagram-icon1.png"><a href="https://instagram.com/tainoheritagecamp/" target="_blank">Instagram</a>
+      <img class="social-icon" src="../images/facebook-icon1.jpg"><a href="https://facebook.com/tainoheritagecamp/" target="_blank">Facebook</a>
+    <button class="close-btn" id="closeLightbox">Close</button>
+  </div>
 </body>
 </html>
