--- a/html/yukayeke.html
+++ b/html/yukayeke.html
@@ -19,7 +19,7 @@
         <a href="./our-location.html">Our Location</a>
         <a href="./contact.html">Contact Us</a>
       </nav>
-      <button class="btn-signing">Socials</button>
+      <button class="btn-signing" id="openLightbox">Socials</button>
     </header>
 
     <section>
@@ -108,5 +108,15 @@
       </div>
     </section>
   </div>
+
+  <div class="lightbox" id="lightbox">
+    <div class="lightbox-content">
+      <h2>Follow Us</h2>
+      <img class="social-icon" src="../images/instagram-icon1.png"><a href="https://instagram.com/tainoheritagecamp/" target="_blank">Instagram</a>
+      <img class="social-icon" src="../images/facebook-icon1.jpg"><a href="https://facebook.com/tainoheritagecamp/" target="_blank">Facebook</a>
+    <button class="close-btn" id="closeLightbox">Close</button>
+  </div>
+
+  <script src="../js/map-location.js"></script>
 </body>
 </html>
