fixes to project structure

--- a/html/index.html
+++ b/html/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <title>Taino Heritage Camp</title>
     <favicon href="../images/Taino_Heritage_Camps.png" type="image/png">
 </head>
 <body>
-    <img src="../images/taino game1.jpg" alt="Picture of Taino Village with Huts" class="image-gradient">
+    <img src="images/taino game1.jpg" alt="Picture of Taino Village with Huts" class="image-gradient">
     <div class="container">
         <header>
             <h1 class="logo">
@@ -58,7 +58,7 @@
     <p>&copy; 2025 Taino Heritage Camp. All Rights Reserved.</p>
 </footer>
 
-<script src="../js/map-location.js"></script>
+<script src="js/map-location.js"></script>
 
 </body>
 </html>
