fixes to project structure

--- a/html/contactus.html
+++ b/html/contactus.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Taino Heritage Camps</title>
-    <link rel="stylesheet" type="text/css" href="../css/contactus.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Taino Heritage Camps</title>
+<link rel="stylesheet" type="text/css" href="css/contactus.css">
+<favicon href="images/Taino_Heritage_Camps.png" type="image/png">
 </head>
 <body>
     <header>
@@ -50,12 +51,12 @@
   <div class="lightbox" id="lightbox">
     <div class="lightbox-content">
       <h2>Follow Us</h2>
-      <img class="social-icon" src="../images/instagram-icon1.png"><a href="https://instagram.com/tainoheritagecamp/" target="_blank">Instagram</a>
-      <img class="social-icon" src="../images/facebook-icon1.jpg"><a href="https://facebook.com/tainoheritagecamp/" target="_blank">Facebook</a>
+      <img class="social-icon" src="images/instagram-icon1.png"><a href="https://instagram.com/tainoheritagecamp/" target="_blank">Instagram</a>
+      <img class="social-icon" src="images/facebook-icon1.jpg"><a href="https://facebook.com/tainoheritagecamp/" target="_blank">Facebook</a>
     <button class="close-btn" id="closeLightbox">Close</button>
   </div>
 
-<script src="../js/map-location.js"></script>
+<script src="js/map-location.js"></script>
 
 </body>
 </html>
