--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <title>Taino Heritage Camp</title>
-    <favicon href="../images/Taino_Heritage_Camps.png" type="image/png">
+    <favicon href="images/Taino_Heritage_Camps.png" type="image/png">
 </head>
 <body>
     <img src="images/taino game1.jpg" alt="Picture of Taino Village with Huts" class="image-gradient">
@@ -47,8 +47,8 @@
   <div class="lightbox" id="lightbox">
     <div class="lightbox-content">
       <h2>Follow Us</h2>
-      <img class="social-icon" src="../images/instagram-icon1.png"><a href="https://instagram.com/tainoheritagecamp/" target="_blank">Instagram</a>
-      <img class="social-icon" src="../images/facebook-icon1.jpg"><a href="https://facebook.com/tainoheritagecamp/" target="_blank">Facebook</a>
+      <img class="social-icon" src="images/instagram-icon1.png"><a href="https://instagram.com/tainoheritagecamp/" target="_blank">Instagram</a>
+      <img class="social-icon" src="images/facebook-icon1.jpg"><a href="https://facebook.com/tainoheritagecamp/" target="_blank">Facebook</a>
     <button class="close-btn" id="closeLightbox">Close</button>
   </div>
     </main>
