--- a/html/our-location.html
+++ b/html/our-location.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taino Heritage Camp</title>
-    <link rel="stylesheet" type="text/css" href="../css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 <script src="https://unpkg.com/leaflet-routing-machine/dist/leaflet-routing-machine.min.js"></script>
 <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine/dist/leaflet-routing-machine.css"/>
 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
+<favicon href="images/Taino_Heritage_Camps.png" type="image/png">
 </head>
 <body>
     <header>
     <h1 class="logo">
-        <a href="./index.html"><img src="../images/Taino_Heritage_Camps.png" alt="Taino Heritage Camp Logo" class="logo-image"></a>
+        <a href="./index.html"><img src="images/Taino_Heritage_Camps.png" alt="Taino Heritage Camp Logo" class="logo-image"></a>
     </h1>
     <nav>
         <a href="./events.html">Book A Visit</a>
@@ -34,11 +35,11 @@ The access road to the camp is a farm road, like all naturally beautiful locatio
   <div class="lightbox" id="lightbox">
     <div class="lightbox-content">
       <h2>Follow Us</h2>
-      <img class="social-icon" src="../images/instagram-icon1.png"><a href="https://instagram.com/tainoheritagecamp/" target="_blank">Instagram</a>
-      <img class="social-icon" src="../images/facebook-icon1.jpg"><a href="https://facebook.com/tainoheritagecamp/" target="_blank">Facebook</a>
+      <img class="social-icon" src="images/instagram-icon1.png"><a href="https://instagram.com/tainoheritagecamp/" target="_blank">Instagram</a>
+      <img class="social-icon" src="images/facebook-icon1.jpg"><a href="https://facebook.com/tainoheritagecamp/" target="_blank">Facebook</a>
     <button class="close-btn" id="closeLightbox">Close</button>
   </div>
-<script src="../js/map-location.js">
+<script src="js/map-location.js">
 </script>
 <footer>
     <p>&copy; 2025 Taino Heritage Camp. All Rights Reserved.</p>
