--- a/html/schoolprograms.html
+++ b/html/schoolprograms.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>School Programs | Taino Heritage Camps</title>
-    <link rel="stylesheet" href="../css/schoolprograms.css">
+    <link rel="stylesheet" href="css/schoolprograms.css">
+<favicon href="images/Taino_Heritage_Camps.png" type="image/png">
 </head>
 <body>
 <header>
     <h1 class="logo">
-        <a href="./index.html"><img src="../images/Taino_Heritage_Camps.png" alt="Taino Heritage Camp Logo" class="logo-image"></a>
+        <a href="./index.html"><img src="images/Taino_Heritage_Camps.png" alt="Taino Heritage Camp Logo" class="logo-image"></a>
     </h1>
     <nav>
         <a href="./events.html">Book A Visit</a>
@@ -27,7 +28,7 @@
         <p>School field trips to Taino Heritage Camp (THC) are coordinated to be competitive as studies have shown that challenge-based interactive "classrooms" increase student focus, attentiveness, and long-term memory retention.</p>
     </div>
     <div class="program-image-wrapper">
-        <img src="../images/taino students flora trail.jpg" class="program-image" alt="Students on a flora trail trek at Taino Heritage Camp">
+        <img src="images/taino students flora trail.jpg" class="program-image" alt="Students on a flora trail trek at Taino Heritage Camp">
     </div>
 </section>
 
@@ -38,7 +39,7 @@
         <p>THC programs have been created to further Grade 4 and Grade 7 student understanding of their Taino syllabus. Studies have shown that children learn better when they can be a part of the experience being taught.</p>
     </div>
     <div class="program-image-wrapper">
-        <img src="../images/Taino Village with Huts.jpg" class="program-image" alt="Traditional Taino Village with Huts">
+        <img src="images/Taino Village with Huts.jpg" class="program-image" alt="Traditional Taino Village with Huts">
     </div> 
 </section>
 
@@ -50,7 +51,7 @@
          </p>
     </div>
     <div class="program-image-wrapper">
-        <img src="../images/taino camp drums.png" class="program-image" alt="Students participating in traditional Taino dance">
+        <img src="images/taino camp drums.png" class="program-image" alt="Students participating in traditional Taino dance">
 </section>
 
 <section class="program-section">
@@ -60,7 +61,7 @@
     <p>THC Directors with Dr Grace McLean, Chief Education Officer of MOEY.</p>
 </div>
 <div class="program-image-wrapper">
-    <img src="../images/taino moeyi visit.jpg" class="program-image" alt="THC Directors with Dr Grace McLean, Chief Education Officer of MOEY">
+    <img src="images/taino moeyi visit.jpg" class="program-image" alt="THC Directors with Dr Grace McLean, Chief Education Officer of MOEY">
 </section>
 
 <section class="program-section">
@@ -79,7 +80,7 @@
     </div>
 </div>
     <div class="program-image-wrapper">
-        <img src="../images/taino hill tour.jpg" class="program-image" alt="Taino-Maroon Unity Walk">
+        <img src="images/taino hill tour.jpg" class="program-image" alt="Taino-Maroon Unity Walk">
     </div>
 </section>
 
@@ -99,7 +100,7 @@
     </div>
 </div>
 <div class="program-image-wrapper">
-        <img src="../images/taino food.jpg" class="program-image" alt="Taino Eats Healthy Eating">
+        <img src="images/taino food.jpg" class="program-image" alt="Taino Eats Healthy Eating">
 </div>
 </section>
 
@@ -113,7 +114,7 @@
         </ul>
     </div>
     <div class="program-image-wrapper">
-        <img src="../images/taino camp visitors.jpg" class="program-image" alt="Students group sizes at Taino Heritage Camp">
+        <img src="images/taino camp visitors.jpg" class="program-image" alt="Students group sizes at Taino Heritage Camp">
     </div>
 </section>
 
@@ -133,7 +134,7 @@
         </div>
     </div>
     <div class="program-image-wrapper">
-            <img src="../images/taino group dance.jpg" class="program-image" alt="Grade 4 students taking part">
+            <img src="images/taino group dance.jpg" class="program-image" alt="Grade 4 students taking part">
     </div>
 </section>
 
@@ -145,8 +146,8 @@
   <div class="lightbox" id="lightbox">
     <div class="lightbox-content">
       <h2>Follow Us</h2>
-      <img class="social-icon" src="../images/instagram-icon1.png"><a href="https://instagram.com/tainoheritagecamp/" target="_blank">Instagram</a>
-      <img class="social-icon" src="../images/facebook-icon1.jpg"><a href="https://facebook.com/tainoheritagecamp/" target="_blank">Facebook</a>
+      <img class="social-icon" src="images/instagram-icon1.png"><a href="https://instagram.com/tainoheritagecamp/" target="_blank">Instagram</a>
+      <img class="social-icon" src="images/facebook-icon1.jpg"><a href="https://facebook.com/tainoheritagecamp/" target="_blank">Facebook</a>
     <button class="close-btn" id="closeLightbox">Close</button>
   </div>
 </main>
@@ -155,7 +156,7 @@
     <p>&copy; 2025 Taino Heritage Camp. All Rights Reserved.</p>
 </footer>
 
-<script src="../js/map-location.js"></script>
+<script src="js/map-location.js"></script>
 
 </body>
 </html>
