--- a/html/visitevents.html
+++ b/html/visitevents.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Taino Heritage Camp Events</title>
-  <link rel="stylesheet" href="../css/eventscalendar.css">
+  <link rel="stylesheet" href="css/eventscalendar.css">
+  <favicon href="images/Taino_Heritage_Camps.png" type="image/png">
 </head>
 <body>
   <header>
     <h1 class="logo">
-    <a href="./index.html"><img src="../images/Taino_Heritage_Camps.png" alt="Taino Heritage Camp Logo" class="logo-image"></a>
+    <a href="./index.html"><img src="images/Taino_Heritage_Camps.png" alt="Taino Heritage Camp Logo" class="logo-image"></a>
     </h1>
     <nav>
         <a href="./events.html">Book A Visit</a>
@@ -45,7 +46,7 @@
   <p id="admin-msg"></p>
 </section>
 
-  <script src="../js/eventscalendar.js"></script>
+  <script src="js/eventscalendar.js"></script>
 <footer>
     <p>&copy; 2025 Taino Heritage Camp. All Rights Reserved.</p>
 </footer>
@@ -53,8 +54,8 @@
   <div class="lightbox" id="lightbox">
     <div class="lightbox-content">
       <h2>Follow Us</h2>
-      <img class="social-icon" src="../images/instagram-icon1.png"><a href="https://instagram.com/tainoheritagecamp/" target="_blank">Instagram</a>
-      <img class="social-icon" src="../images/facebook-icon1.jpg"><a href="https://facebook.com/tainoheritagecamp/" target="_blank">Facebook</a>
+      <img class="social-icon" src="images/instagram-icon1.png"><a href="https://instagram.com/tainoheritagecamp/" target="_blank">Instagram</a>
+      <img class="social-icon" src="images/facebook-icon1.jpg"><a href="https://facebook.com/tainoheritagecamp/" target="_blank">Facebook</a>
     <button class="close-btn" id="closeLightbox">Close</button>
   </div>
 </body>
