--- a/html/yukayeke.html
+++ b/html/yukayeke.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Taino Heritage Camps - Yukayeke</title>
-  <link rel="stylesheet" type="text/css" href="../css/yukayeke.css">
+  <link rel="stylesheet" type="text/css" href="css/yukayeke.css">
+  <favicon href="images/Taino_Heritage_Camps.png" type="image/png">
 </head>
 <body>
   <div class="container">
@@ -86,9 +87,9 @@
         Together, we carry on the mission of preserving and sharing Taino heritage.
       </p>
       <div class="team-gallery">
-        <img src="../images/thc team.jpg" alt="Team Photo">
+        <img src="images/thc team.jpg" alt="Team Photo">
         <p>L-R: Tekina Giles, Cacike Ilewe'Garabali, Tekina Leon, Behike Florence</p>
-        <img src="../images/collaborators.jpg" alt="Team Photo">
+        <img src="images/collaborators.jpg" alt="Team Photo">
         <p>L-R: Cacike Jorge Estevez, Cacike Anasu'hura, Behike Florence</p>
       </div>
     </section>
@@ -101,10 +102,10 @@
         These partnerships provide the yukayeke with an authentic community and trade-based environment.
       </p>
       <div class="collab-logos">
-        <img src="../images/logo1.jpg" alt="Higuay Union">
-        <img src="../images/logo2.jpg" alt="HTOC">
-        <img src="../images/logo4.jpg" alt="MOEY">
-        <img src="../images/Taino Heritage Camps logo.jpg" alt="IOJ">
+        <img src="images/logo1.jpg" alt="Higuay Union">
+        <img src="images/logo2.jpg" alt="HTOC">
+        <img src="images/logo4.jpg" alt="MOEY">
+        <img src="images/Taino Heritage Camps logo.jpg" alt="IOJ">
       </div>
     </section>
   </div>
@@ -112,11 +113,11 @@
   <div class="lightbox" id="lightbox">
     <div class="lightbox-content">
       <h2>Follow Us</h2>
-      <img class="social-icon" src="../images/instagram-icon1.png"><a href="https://instagram.com/tainoheritagecamp/" target="_blank">Instagram</a>
-      <img class="social-icon" src="../images/facebook-icon1.jpg"><a href="https://facebook.com/tainoheritagecamp/" target="_blank">Facebook</a>
+      <img class="social-icon" src="images/instagram-icon1.png"><a href="https://instagram.com/tainoheritagecamp/" target="_blank">Instagram</a>
+      <img class="social-icon" src="images/facebook-icon1.jpg"><a href="https://facebook.com/tainoheritagecamp/" target="_blank">Facebook</a>
     <button class="close-btn" id="closeLightbox">Close</button>
   </div>
 
-  <script src="../js/map-location.js"></script>
+  <script src="js/map-location.js"></script>
 </body>
 </html>
