--- a/html/our-location.html
+++ b/html/our-location.html
@@ -36,7 +36,7 @@ The access road to the camp is a farm road, like all naturally beautiful locatio
     <div class="lightbox-content">
       <h2>Follow Us</h2>
       <img class="social-icon" src="images/instagram-icon1.png"><a href="https://instagram.com/tainoheritagecamp/" target="_blank">Instagram</a>
-      <img class="social-icon" src="images/facebook-icon1.jpg"><a href="https://facebook.com/tainoheritagecamp/" target="_blank">Facebook</a>
+      <img class="social-icon" src="images/facebook-icon1.png"><a href="https://facebook.com/tainoheritagecamp/" target="_blank">Facebook</a>
     <button class="close-btn" id="closeLightbox">Close</button>
   </div>
 <script src="js/map-location.js">
