added video to yukayeke page

--- a/html/yukayeke.html
+++ b/html/yukayeke.html
@@ -24,6 +24,10 @@
     </header>
 
     <section>
+      <video width="800" height="450" controls autoplay loop>
+        <source src="images/thctour.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
         <div class="what-to-expect">
                 <h2>What to Expect</h2>
                 <p>
