--- a/html/yukayeke.html
+++ b/html/yukayeke.html
@@ -25,7 +25,7 @@
 
     <section>
       <video width="800" height="450" controls autoplay loop>
-        <source src="images/thctour.mp4" type="video/mp4">
+        <source src="images/thcguesttour.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
         <div class="what-to-expect">
