--- a/html/schoolprograms.html
+++ b/html/schoolprograms.html
@@ -22,10 +22,12 @@
 </header>
 
 <main>
-<video width="800" height="450" controls autoplay loop>
-    <source src="images/welcometoTHC.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-</video>
+<div class="video-container">
+    <video width="800" height="450" controls autoplay loop>
+        <source src="images/welcometoTHC.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+</div>
 <section class="program-section">
     <div class="program-text">
         <h2>School Field Trips</h2>
