--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,11 @@
     <favicon href="images/Taino_Heritage_Camps.png" type="image/png">
 </head>
 <body>
-    <img src="images/taino game1.jpg" alt="Picture of Taino Village with Huts" class="image-gradient">
+    <!-- <img src="images/taino game1.jpg" alt="Picture of Taino Village with Huts" class="image-gradient"> -->
+    <video width="800" height="450" class="image-gradient" controls autoplay loop>
+        <source src="images/welcometoTHC.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
     <div class="container">
         <header>
             <h1 class="logo">
