--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- <img src="images/taino game1.jpg" alt="Picture of Taino Village with Huts" class="image-gradient"> -->
-    <video width="800" height="450" class="image-gradient" controls autoplay loop>
+    <video width="800" height="450" class="image-gradient" autoplay loop>
         <source src="images/welcometoTHC.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
