--- a/html/index.html
+++ b/html/index.html
@@ -9,10 +9,11 @@
 </head>
 <body>
     <!-- <img src="images/taino game1.jpg" alt="Picture of Taino Village with Huts" class="image-gradient"> -->
-    <video width="800" height="450" class="image-gradient" autoplay loop>
-        <source src="images/welcometoTHC.mp4" type="video/mp4">
-        Your browser does not support the video tag.
+    <video autoplay muted loop class="image-gradient">
+    <source src="images/welcometoTHC.mp4" type="video/mp4">
+    Your browser does not support the video tag.
     </video>
+    <div class="overlay"></div>
     <div class="container">
         <header>
             <h1 class="logo">
