added videos to site

--- a/html/yukayeke.html
+++ b/html/yukayeke.html
@@ -23,11 +23,11 @@
       <button class="btn-signing" id="openLightbox">Socials</button>
     </header>
 
-    <section>
-      <video width="800" height="450" controls autoplay loop>
+    <!-- <video width="800" height="450" controls autoplay loop>
         <source src="images/thcguesttour.mp4" type="video/mp4">
         Your browser does not support the video tag.
-      </video>
+    </video> -->
+    <section>
         <div class="what-to-expect">
                 <h2>What to Expect</h2>
                 <p>
