--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- <img src="images/taino game1.jpg" alt="Picture of Taino Village with Huts" class="image-gradient"> -->
     <video autoplay muted loop class="image-gradient">
-    <source src="images/welcometoTHCpark.mp4" type="video/mp4">
+    <source src="images/welcometoTHCpark.mov" type="video/mp4">
     Your browser does not support the video tag.
     </video>
     <div class="overlay"></div>
