commented index page description

--- a/html/index.html
+++ b/html/index.html
@@ -39,10 +39,10 @@
 
                     <h1>Tour Our Camp</h1>
 
-                    <p class="description">
+                    <!-- <p class="description">
                         Our camp offers a unique opportunity to learn about traditional Taino practices, 
                         participate in cultural activities, and connect with nature in a beautiful setting. 
-                    </p>
+                    </p> -->
             </div>
             <div class="buttons">
                     <a href="./schoolprograms.html" class="btn-get-started-school">Explore School Programs</a>
