--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
     <source src="images/welcometoTHCpark.mov" type="video/mp4">
     Your browser does not support the video tag.
     </video>
-    <div class="overlay"></div>
+    <!-- <div class="overlay"></div> -->
     <div class="container">
         <header>
             <h1 class="logo">
