removed background blur

--- a/html/events.html
+++ b/html/events.html
@@ -21,6 +21,7 @@
 </header>
 
 <main>
+  <h2>Please wait a few seconds before using the ticket agent</h2>
   <div class="ticket-agent">
   <h1>Taino Heritage Camp Ticket Agent</h1>
   <div id="chat" class="chat-input"></div>
