media queries for smaller viewports index.html

--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- <img src="images/taino game1.jpg" alt="Picture of Taino Village with Huts" class="image-gradient"> -->
-    <video autoplay muted loop class="image-gradient">
+    <video autoplay muted loop playsinline class="image-gradient">
     <source src="images/welcometoTHCpark.mov" type="video/mp4">
     Your browser does not support the video tag.
     </video>
@@ -19,6 +19,9 @@
             <h1 class="logo">
                 <a href="./index.html"><img src="../images/Taino_Heritage_Camps.png" alt="Taino Heritage Camp Logo" class="logo-image"></a>
             </h1>
+
+            <button class="hamburger" id="hamburger">&#9776;</button>
+            
             <nav>
                 <a href="./events.html">Book A Visit</a>
                 <a href="./visitevents.html">View Events Calendar</a>
