media queries for smaller viewports index.html

--- a/html/index.html
+++ b/html/index.html
@@ -15,50 +15,50 @@
     </video>
     <!-- <div class="overlay"></div> -->
     <div class="container">
-        <header>
-            <h1 class="logo">
-                <a href="./index.html"><img src="../images/Taino_Heritage_Camps.png" alt="Taino Heritage Camp Logo" class="logo-image"></a>
-            </h1>
+    <header>
+        <h1 class="logo">
+            <a href="./index.html"><img src="../images/Taino_Heritage_Camps.png" alt="Logo" class="logo-image"></a>
+        </h1>
 
-            <button class="hamburger" id="hamburger">&#9776;</button>
-            
-            <nav>
-                <a href="./events.html">Book A Visit</a>
-                <a href="./visitevents.html">View Events Calendar</a>
-                <a href="./our-location.html">Our Location</a>
-                <a href="./contactus.html">Contact Us</a>
-            </nav>
+        <button class="hamburger" id="hamburger">&#9776;</button>
 
-            <button class="btn-signing" id="openLightbox">Socials</button>
-        </header>
+        <nav id="nav-links">
+            <a href="./events.html">Book A Visit</a>
+            <a href="./visitevents.html">View Events Calendar</a>
+            <a href="./our-location.html">Our Location</a>
+            <a href="./contactus.html">Contact Us</a>
+        </nav>
 
-        <main>
-            <div class="content">
-                <div class="tag-box">
-                    <!-- <div class="tag">
-                        INTRODUCING THE TAINO HERITAGE CAMP
-                    </div> -->
-                </div>
+        <button class="btn-signing" id="openLightbox">Socials</button>
+    </header>
 
-                    <h1>Tour Our Camp</h1>
-
-                    <!-- <p class="description">
-                        Our camp offers a unique opportunity to learn about traditional Taino practices, 
-                        participate in cultural activities, and connect with nature in a beautiful setting. 
-                    </p> -->
-            </div>
-            <div class="buttons">
-                    <a href="./schoolprograms.html" class="btn-get-started-school">Explore School Programs</a>
-                    <a href="./yukayeke.html" class="btn-learn-more-yukayeke">The Yukayeke Experience</a>
+    <main>
+        <div class="content">
+            <div class="tag-box">
+                <!-- <div class="tag">
+                    INTRODUCING THE TAINO HERITAGE CAMP
+                </div> -->
             </div>
 
-  <div class="lightbox" id="lightbox">
-    <div class="lightbox-content">
-      <h2>Follow Us</h2>
-      <img class="social-icon" src="images/instagram-icon1.png"><a href="https://instagram.com/tainoheritagecamp/" target="_blank">Instagram</a>
-      <img class="social-icon" src="images/facebook-icon1.png"><a href="https://facebook.com/tainoheritagecamp/" target="_blank">Facebook</a>
-    <button class="close-btn" id="closeLightbox">Close</button>
-  </div>
+            <h1>Tour Our Camp</h1>
+
+            <!-- <p class="description">
+                Our camp offers a unique opportunity to learn about traditional Taino practices, 
+                participate in cultural activities, and connect with nature in a beautiful setting. 
+            </p> -->
+        </div>
+        <div class="buttons">
+            <a href="./schoolprograms.html" class="btn-get-started-school">Explore School Programs</a>
+            <a href="./yukayeke.html" class="btn-learn-more-yukayeke">The Yukayeke Experience</a>
+        </div>
+
+    <div class="lightbox" id="lightbox">
+        <div class="lightbox-content">
+            <h2>Follow Us</h2>
+            <img class="social-icon" src="images/instagram-icon1.png"><a href="https://instagram.com/tainoheritagecamp/" target="_blank">Instagram</a>
+            <img class="social-icon" src="images/facebook-icon1.png"><a href="https://facebook.com/tainoheritagecamp/" target="_blank">Facebook</a>
+            <button class="close-btn" id="closeLightbox">Close</button>
+        </div>
     </main>
 </div> 
 
