media queries for smaller viewports index.html

--- a/html/index.html
+++ b/html/index.html
@@ -59,6 +59,7 @@
             <img class="social-icon" src="images/facebook-icon1.png"><a href="https://facebook.com/tainoheritagecamp/" target="_blank">Facebook</a>
             <button class="close-btn" id="closeLightbox">Close</button>
         </div>
+    </div>
     </main>
 </div> 
 
