--- a/html/events.html
+++ b/html/events.html
@@ -32,7 +32,7 @@
     <div class="lightbox-content">
       <h2>Follow Us</h2>
       <img class="social-icon" src="images/instagram-icon1.png"><a href="https://instagram.com/tainoheritagecamp/" target="_blank">Instagram</a>
-      <img class="social-icon" src="images/facebook-icon1.png"><a href="https://facebook.com/tainoheritagecamp/" target="_blank">Facebook</a>
+      <img class="social-icon" src="images/facebook.png"><a href="https://facebook.com/tainoheritagecamp/" target="_blank">Facebook</a>
     <button class="close-btn" id="closeLightbox">Close</button>
   </div>
 </main>
