--- a/html/schoolprograms.html
+++ b/html/schoolprograms.html
@@ -12,6 +12,9 @@
     <h1 class="logo">
         <a href="./index.html"><img src="images/Taino_Heritage_Camps.png" alt="Taino Heritage Camp Logo" class="logo-image"></a>
     </h1>
+
+    <button class="hamburger" id="hamburger">&#9776;</button>
+
     <nav>
         <a href="./events.html">Book A Visit</a>
         <a href="./visitevents.html">View Events Calendar</a>
