media queries for smaller viewports schoolprograms.html

--- a/html/events.html
+++ b/html/events.html
@@ -11,6 +11,9 @@
   <h1 class="logo">
     <a href="./index.html"><img src="images/Taino_Heritage_Camps.png" alt="Taino Heritage Camp Logo" class="logo-image"></a>
   </h1>
+
+  <button class="hamburger" id="hamburger">&#9776;</button>
+
   <nav>
     <a href="#">Book A Visit</a>
     <a href="./visitevents.html">View Events Calendar</a>
