--- a/html/schoolprograms.html
+++ b/html/schoolprograms.html
@@ -15,7 +15,7 @@
 
     <button class="hamburger" id="hamburger">&#9776;</button>
 
-    <nav>
+    <nav id="nav-links">
         <a href="./events.html">Book A Visit</a>
         <a href="./visitevents.html">View Events Calendar</a>
         <a href="./our-location.html">Our Location</a>
