media queries for smaller viewports schoolprograms.html

--- a/html/schoolprograms.html
+++ b/html/schoolprograms.html
@@ -8,19 +8,19 @@
 <favicon href="images/Taino_Heritage_Camps.png" type="image/png">
 </head>
 <body>
-<header>
-    <h1 class="logo">
-        <a href="./index.html"><img src="images/Taino_Heritage_Camps.png" alt="Taino Heritage Camp Logo" class="logo-image"></a>
-    </h1>
+    <header>
+        <h1 class="logo">
+            <a href="./index.html"><img src="../images/Taino_Heritage_Camps.png" alt="Logo" class="logo-image"></a>
+        </h1>
 
-    <button class="hamburger" id="hamburger">&#9776;</button>
+        <button class="hamburger" id="hamburger">&#9776;</button>
 
-    <nav id="nav-links">
-        <a href="./events.html">Book A Visit</a>
-        <a href="./visitevents.html">View Events Calendar</a>
-        <a href="./our-location.html">Our Location</a>
-        <a href="./contactus.html">Contact Us</a>
-    </nav>
+        <nav id="nav-links">
+            <a href="./events.html">Book A Visit</a>
+            <a href="./visitevents.html">View Events Calendar</a>
+            <a href="./our-location.html">Our Location</a>
+            <a href="./contactus.html">Contact Us</a>
+        </nav>
   <button class="btn-signing" id="openLightbox">Socials</button>
 </header>
 
