--- a/html/yukayeke.html
+++ b/html/yukayeke.html
@@ -14,7 +14,10 @@
       <h1 class="logo">
         <a href="./index.html"><img src="../images/Taino_Heritage_Camps.png" alt="Taino Heritage Camp Logo" class="logo-image"></a>
       </h1>
-      <nav>
+
+      <button class="hamburger" id="hamburger">&#9776;</button>
+
+      <nav id="nav-links">
         <a href="./events.html">Book A Visit</a>
         <a href="./visitevents.html">View Events Calendar</a>
         <a href="./our-location.html">Our Location</a>
