--- a/html/events.html
+++ b/html/events.html
@@ -14,7 +14,7 @@
 
   <button class="hamburger" id="hamburger">&#9776;</button>
 
-  <nav>
+  <nav id="nav-links">
     <a href="#">Book A Visit</a>
     <a href="./visitevents.html">View Events Calendar</a>
     <a href="./our-location.html">Our Location</a>
