--- a/html/our-location.html
+++ b/html/our-location.html
@@ -6,7 +6,8 @@
     <title>Taino Heritage Camp</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-<script src="https://unpkg.com/leaflet-routing-machine/dist/leaflet-routing-machine.min.js"></script>
+<script src="https://unpkg.com/leaflet-routing-machine/dist/leaflet-routing-machine.js"></script>
+<script src="https://unpkg.com/lrm-graphhopper/dist/lrm-graphhopper.js"></script>
 <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine/dist/leaflet-routing-machine.css"/>
 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
 <favicon href="images/Taino_Heritage_Camps.png" type="image/png">
