media queries for smaller viewportsmap=location.html and updating map-location.js

--- a/html/events.html
+++ b/html/events.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Taino Heritage Camp Ticket Agent</title>
 <link rel="stylesheet" href="css/events.css">
-<favicon href="images/Taino_Heritage_Camps.png" type="image/png">
+<link rel="icon" href="images/Taino_Heritage_Camps.png" type="image/png">
 </head>
 <body>
 <header>
