--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <title>Taino Heritage Camp</title>
-    <favicon href="images/Taino_Heritage_Camps.png" type="image/png">
+<link rel="icon" href="images/Taino_Heritage_Camps.png" type="image/png">
 </head>
 <body>
     <!-- <img src="images/taino game1.jpg" alt="Picture of Taino Village with Huts" class="image-gradient"> -->
