--- a/html/schoolprograms.html
+++ b/html/schoolprograms.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>School Programs | Taino Heritage Camps</title>
     <link rel="stylesheet" href="css/schoolprograms.css">
-<favicon href="images/Taino_Heritage_Camps.png" type="image/png">
+<link rel="icon" href="images/Taino_Heritage_Camps.png" type="image/png">
 </head>
 <body>
     <header>
