--- a/html/contactus.html
+++ b/html/contactus.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Taino Heritage Camps</title>
 <link rel="stylesheet" type="text/css" href="css/contactus.css">
-<favicon href="images/Taino_Heritage_Camps.png" type="image/png">
+<link rel="icon" href="images/Taino_Heritage_Camps.png" type="image/png">
 </head>
 <body>
     <header>
