--- a/html/visitevents.html
+++ b/html/visitevents.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Taino Heritage Camp Events</title>
   <link rel="stylesheet" href="css/eventscalendar.css">
-  <favicon href="images/Taino_Heritage_Camps.png" type="image/png">
+<link rel="icon" href="images/Taino_Heritage_Camps.png" type="image/png">
 </head>
 <body>
   <header>
