--- a/html/events.html
+++ b/html/events.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <title>Taino Heritage Camp Ticket Agent</title>
 <link rel="stylesheet" href="css/events.css">
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" defer></script>
 <link rel="icon" href="images/Taino_Heritage_Camps.png" type="image/png">
 </head>
 <body>
