--- a/html/visitevents.html
+++ b/html/visitevents.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <title>Taino Heritage Camp Events</title>
   <link rel="stylesheet" href="css/eventscalendar.css">
-<link rel="icon" href="images/Taino_Heritage_Camps.png" type="image/png">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" defer></script>
+  <link rel="icon" href="images/Taino_Heritage_Camps.png" type="image/png">
 </head>
 <body>
   <header>
