--- a/html/yukayeke.html
+++ b/html/yukayeke.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Taino Heritage Camps - Yukayeke</title>
   <link rel="stylesheet" type="text/css" href="css/yukayeke.css">
-<link rel="icon" href="images/Taino_Heritage_Camps.png" type="image/png">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" defer></script>
+  <link rel="icon" href="images/Taino_Heritage_Camps.png" type="image/png">
 </head>
 <body>
   <div class="container">
