fix to hamburger menu issue on mobiles

--- a/html/our-location.html
+++ b/html/our-location.html
@@ -34,7 +34,7 @@ The access road to the camp is a farm road, like all naturally beautiful locatio
   <h1>Taino Heritage Camp Route</h1>
   <h3>From Ocho Rios to Eden Hill</h3>
 </div>
-
+<button id="startRouteBtn">Start Route</button>
 <div class="map-container">
     <div id="map"></div>
 </div>
